flex property, fixed over, fixed white space, fixed size for texterea

--- a/homepage.css
+++ b/homepage.css
@@ -1,10 +1,10 @@
+/* CONTAINERS */
 html,
 body {
   width: 100%;
   height: 100%;
   margin: 0px;
   padding: 0px;
-  overflow-x: hidden;
 }
 
 .main_container {
@@ -13,106 +13,136 @@ body {
   left: 0px;
   bottom: 0px;
   right: 0px;
-  /* width: 100%;
-    height: 100%; */
   background: rgb(40, 40, 40);
   background-size: cover;
+  overflow-y: auto;
+}
+/* ________________________________________________________________ */
+
+/* HEADER */
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-.main_header {
+#main_heading {
+  display: flex;
   color: red;
   position: relative;
-  margin-top: 3%;
-  margin-left: 5%;
+  top: 3%;
+  left: 20px;
   font-size: 36px;
+  font-weight: 900;
 }
 
-.main_sub_header {
+#sub_heading {
   position: relative;
+  display: flex;
+  flex-direction: column;
   color: silver;
   top: 5%;
-  left: 5%;
+  left: 20px;
   font-size: 20px;
+  font-family: "Courier New", Courier, monospace;
+  font-weight: 900;
 }
 
-/* .profile_btn {
-  background-color: white;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-} */
-
-#profile_button{
-  position: absolute;
-  height: auto;
-  left: 85%
+.profile {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
 }
+
 .profile_img {
-  position: absolute;
+  position: relative;
+  display: flex;
   max-width: 80px;
   height: auto;
   border-radius: 50%;
-  margin-left: 85%;
-  margin-top: -100px;
-  
+  text-align: center;
+  right: 10%;
+  top: 5%;
+  margin-bottom: 10px;
 }
-.profile_img:hover{
+
+.profile_img:hover {
   opacity: 0.7;
   cursor: pointer;
 }
 
-/* .profile_content {
-  display: none;
-  position: absolute;
-  background: white;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-} */
+.profile_btn-primary {
+  position: relative;
+  height: auto;
+  right: 10%;
+}
+/* ________________________________________________________________ */
 
-/* .profile_img:hover .profile_content {
-  display: block;
-} */
-
+/* SEARCH */
 .search_bar {
   position: relative;
-  margin: 5% 10% 5% 5%;
+  margin-top: 50px;
+  left: 20px;
+  margin-bottom: 50px;
 }
 
 .search_bar input {
-  padding-right: 55%;
+  position: relative;
+  padding-right: 35%;
   padding-bottom: 6px;
 }
-#search_button{
+
+#search_button {
   position: relative;
 }
+/* ___________________________________________________________________ */
 
+.content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  gap: 50px;
+  flex-wrap: wrap;
+}
+
+/* LIST */
 .list_container {
   position: relative;
-  /* border: 2px solid white; */
-  margin-left: 5%;
-  margin-right: 5%;
-  margin-bottom: 5%;
-  padding: 3%;
+  left: 20px;
+  padding: 2%;
   background: linear-gradient(135deg, rgb(58, 57, 57), black);
-  max-width: 800px;
-  float: left;
+  max-width: 700px;
+  min-width: 600px;
   box-shadow: 0 4px 20px 0 rgba(241, 237, 237, 0.2),
     0 6px 20px 0 rgba(48, 45, 45, 0.19);
+  color: white;
+}
+
+.title_input {
+  text-align: center;
+}
+
+.title_input #title {
+  text-align: center;
+}
+
+.checklist li {
+  list-style: none;
+  padding: 15px 0 0 0;
 }
 
 .add_task_button {
   margin-top: 20px;
   margin-left: 20px;
 }
+/* ______________________________________________________________ */
 
+/* NOTES */
 .notes_container {
   position: relative;
-  /* border: 2px solid white; */
-  max-width: 800px;
-  margin-left: 10%;
-  margin-right: 10%;
+  right: 20px;
+  max-width: 600px;
+  min-width: 500px;
   background: linear-gradient(135deg, rgb(58, 57, 57), black);
   padding: 1%;
   color: white;
@@ -127,11 +157,12 @@ body {
   font-family: "Courier New", Courier, monospace;
 }
 
+/* ICONS  */
 .new_notes_icon {
   position: fixed;
   background: white;
   bottom: 25%;
-  right: 1%;
+  right: 20px;
   width: 50px;
   border: 2px solid gray;
 }
@@ -140,7 +171,7 @@ body {
   position: fixed;
   background: white;
   bottom: 15%;
-  right: 1%;
+  right: 20px;
   width: 50px;
   border: 2px solid gray;
 }
@@ -149,24 +180,9 @@ body {
   position: fixed;
   background: white;
   bottom: 5%;
-  right: 1%;
+  right: 20px;
   width: 50px;
   border: 2px solid gray;
   display: inline-block;
 }
-
-.new_list_text {
-  visibility: hidden;
-  width: 120px;
-  background-color: gray;
-  color: white;
-  text-align: center;
-  padding: 5px 0;
-  border-radius: 10%;
-  z-index: -1;
-}
-
-.new_list_icon:hover p {
-  visibility: visible;
-  right: 105%;
-}
+/* _____________________________________________________________ */
